<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take Picture</string>
    <string name="pictures">Pictures</string>
    <string name="title_activity_display_photos">Display Photos</string>
    <string name="name">Name:</string>
    <string name="distance">Distance:</string>
    <string name="fileNames">Filenames:</string>
	<string name="update">Update</string>
    
</resources>
