<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blueblack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cameralocation.DisplayPhotos" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_display_photos"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    
   <LinearLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="50dp">
        
        <TextView
            android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
   		/>
                
        <TextView android:id="@+id/NamePlace"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:hint="Place name"
	      	android:textColor="#FFFFFF"
   		/>
     </LinearLayout>
     
       
   <LinearLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="90dp">
        
        <TextView
            android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/distance"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
   		/>
                
        <TextView android:id="@+id/NameDistance"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:hint="Distance"
	      	android:textColor="#FFFFFF"
   		/>
     </LinearLayout>
     
     
         
    <RelativeLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="150dp">
		
                 
	    <Spinner
	        android:id="@+id/spinnerNames"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	    />
	    
        <ImageView
	        android:id="@+id/displayImage"
	        android:paddingTop="40dp"
	        android:paddingLeft="10dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    />

	</RelativeLayout>
        
</RelativeLayout>
 